# bibtex-pruner

./: .gitignore  README.md  pyproject.toml
docs/: README.md
src/bibtex-pruner/: __main__.py
