[tool.poetry]
name = "bibtex-pruner"
version = "0.2.0"
description = ""
authors = ["快乐的老鼠宝宝 <keaitianxinmail@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibtex-pruner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
bibtexparser = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
